# ort_example

./: CMakeLists.txt  main.cpp
